//copyright 2013 Computer Science Department, Recursive InterNetworking Architecture (RINA) laboratory, Boston University.
//All rights reserved. Permission to use, copy, modify, and distribute this software and its documentation for any purpose 
//and without fee is hereby granted, provided that the above copyright notice appear in all copies and that both the 
//copyright notice and this permission notice appear in supporting documentation. The RINA laboratory of the Computer 
//Science Department at Boston University makes no representations about the suitability of this software for any purpose.
//It is provided "as is" without express or implied warranty.

package rina.object.gpb;

message routingEntrySet_t{   //carries information about all the routing entry
        required uint64 addr = 1;
	repeated routingEntry_t routingEntrySet = 2;
       required uint64 timestamp =3;
}

message routingEntry_t{   //carries information about a routing entry 
	required uint64 srcAddr = 1;
	required uint64 dstAddr = 2;
       required double cost = 3;
	required uint64 timestamp = 4;
}

message routingEntrySetForwardedByNeighbor_t{     
	repeated routingEntrySet_t routingEntrySetForwardedByNeighbor = 1;
       }